<resources>
    <string name="app_name">Camping</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_input">Email</string>
    <string name="password_input_register">Password (min. 8 characters)</string>
    <string name="password_input">Password</string>
    <string name="pwdForgot">Forgotten Password?</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="phone_input">Phone</string>
    <string name="name_input">Name</string>
    <string name="home_fragment_title">Camping trips</string>
    <string name="notification_fragment_title">Notifications</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password_text">To get change your password, please enter you e-mail address so we can send you a OTP code for confirmation</string>
    <string name="forgot_password">Forgot password</string>
    <string name="confirm_text">Please confirm the 4 digit code we’ve sent to you on your e-mail</string>
    <string name="code">Code</string>
    <string name="ConfirmOtp">Confirm OTP</string>
    <string name="newPasswordText">Enter your new password and please do not forget it this time.</string>
    <string name="SetPassword">Set password</string>
    <string name="Hurray">Hurray</string>
    <string name="HurrayTextForgot">You\'ve changed your password successfully</string>
    <string name="GoBack">Go Back</string>
    <string name="registerOtpText">Please confirm the 4 digit code we’ve sent to you on your e-mail. Which has been sent to your email</string>
    <string name="registerTextHurray">You have registered successfully!\nPlease check your inbox for verification mail\n(Check spam as well)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_profle_title">Edit profile</string>
    <string name="change_picture">Change picture</string>
    <string name="occupation_input">Occupation</string>
    <string name="description_input">Description</string>
    <string name="camping_trips">Camping Trips</string>
    <string name="add_teammate_title">Add teammate</string>
    <string name="ID">ID</string>
    <string name="add_teammate_button">Add a teammate</string>
    <string name="no_teammates_message">You don’t have any teammates</string>
    <string name="add_teammate_instructions">Please type in your friends ID. They will receive a notification of the invite. When they accept they will be in the “Teammates” tab</string>
    <string name="button_send_invite">Send invite</string>
    <string name="Add_new_trip">Add new trip</string>
    <string name="trip_name">Trip name</string>
    <string name="Location">Location</string>
    <string name="Open_Map">Open map</string>
    <string name="Teammates">Teammates</string>
    <string name="Add_teammate">Add Teammate</string>
    <string name="Date">Date</string>
    <string name="email_sent">Email sent</string>
    <string name="message_not_verified">Mail is not verified, check your inbox</string>
    <string name="error">Error, try again</string>
    <string name="notifications">Notifications</string>
    <string name="recent_trips_label">Recent trips</string>
    <string name="recent_trips_desc">Shows you your trip history</string>
    <string name="delete_trips_label">Delete all trips</string>
    <string name="delete_trips_desc">It will delete your trip history</string>
    <string name="settings_label">Settings</string>
    <string name="activities">Activities</string>
    <string name="memories">Memories</string>
    <string name="backpack">Backpack</string>
    <string name="teammates">Teammates</string>
    <string name="set_date">Set date</string>
    <string name="confirmLocation">Confirm</string>
    <string name="logout_question">Are you sure you want to logout?</string>
    <string name="delete_all_trips_question">Are you sure you want to delete all trips?</string>
    <string-array name="Names">
        <item>Marko</item>
        <item>Janko</item>
        <item>Darko</item>
    </string-array>
    <string-array name="Occupations">
        <item>Molar</item>
        <item>Stolar</item>
        <item>Lekar</item>
    </string-array>
    <string-array name="types">
        <item>Type of activity</item>
        <item>Nice View</item>
        <item>Shelter</item>
        <item>Point of Interest</item>
    </string-array>


    <string name="db_coll_users">users</string>
    <string name="db_coll_trips">trips</string>
    <string name="db_coll_req">requests</string>
    <string name="db_coll_newTrips">newTrips</string>

    <string name="db_realtime_db">https://mosisprojekat-2b28d-default-rtdb.europe-west1.firebasedatabase.app/</string>

    <string name="intent_filter_notif">AjdProradi</string>

</resources>