<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegisterHurray" >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/hurray_image"
        app:layout_constraintTop_toTopOf="@id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/Hurray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hurray"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/HurrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerTextHurray"
        android:textAlignment="center"
        android:textColor="@color/Gray600"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Hurray" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/GoBack"
        app:layout_constraintTop_toBottomOf="@id/HurrayText"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/et_button_shape_green"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>