<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout14"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAddTripForm">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_add_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Add_new_trip"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_backButton"
            app:layout_constraintStart_toEndOf="@id/image_backButton"
            app:layout_constraintTop_toTopOf="@id/image_backButton" />

        <ImageView
            android:id="@+id/image_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/outline_arrow_back_ios_black_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/trip_name"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/EditText_trip_name"
            app:layout_constraintStart_toStartOf="@id/EditText_trip_name">

        </TextView>

        <EditText
            android:id="@+id/EditText_trip_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_style"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_add_trip" />

        <TextView
            android:id="@+id/textView_Location"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/et_style"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EditText_trip_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/Location"
            android:textSize="16dp"
            app:layout_constraintBottom_toTopOf="@id/textView_Location"
            app:layout_constraintStart_toStartOf="@id/textView_Location"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/textView_Location"
            app:layout_constraintStart_toStartOf="@id/textView_Location"
            android:textColor="@color/Green"
            android:text="@string/Open_Map"
            android:background="@drawable/et_button_shape_greenstroke"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>