<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentForgotPasswordOtp" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConfirmOtp"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/imageView_backButton"
        app:layout_constraintStart_toEndOf="@id/imageView_backButton"
        app:layout_constraintTop_toTopOf="@id/imageView_backButton"/>

    <ImageView
        android:id="@+id/imageView_backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_arrow_back_ios_black_36"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        android:textSize="16dp"
        android:textColor="@color/Gray600"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/editText_OTP_Number"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/et_style"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:paddingStart="20dp"
        android:maxLength="4"
        android:paddingEnd="10dp"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        app:layout_constraintBottom_toTopOf="@id/editText_OTP_Number"
        app:layout_constraintStart_toStartOf="@id/editText_OTP_Number"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="Send"
        android:textColor="@color/white"
        android:background="@drawable/et_button_shape_green"
        app:layout_constraintTop_toBottomOf="@id/editText_OTP_Number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>